# Codexweb1

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml  test
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20240920_0001_init.py
app/: cli.py  config.py  main.py
app/api/routes/: feedback.py  health.py  infer.py  wines.py
app/db/: session.py
app/middleware/: rate_limit.py
app/models/: __init__.py  wine.py
app/schemas/: feedback.py  inference.py  wine.py
app/services/: embeddings.py  explain.py  inference.py  ocr.py  retrieval.py  scoring.py  storage.py
app/utils/: images.py  strings.py  timing.py
data/: seed_wines.json
frontend/: .eslintrc.cjs  index.html  package.json  playwright.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  router.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CandidateList.tsx  ErrorToast.tsx  ExplainChips.tsx  ImageDropzone.tsx  ProgressBar.tsx
frontend/src/hooks/: useHistory.ts
frontend/src/pages/: HistoryPage.tsx  ResultPage.tsx  UploadPage.tsx
scripts/: benchmark.py  seed_db.py
tests/: conftest.py  test_api.py  test_inference.py  test_retrieval.py  test_scoring.py  test_strings.py
