[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winelens"
version = "0.1.0"
description = "WineLens backend services"
requires-python = ">=3.11"
authors = [{name = "WineLens Team"}]
readme = "README.md"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.4",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic-settings==2.2.1",
    "pillow==10.3.0",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "joblib==1.4.2",
    "orjson==3.10.3",
    "structlog==24.1.0",
    "python-dateutil==2.9.0.post0",
    "aiofiles==23.2.1",
    "httpx==0.27.0"
]

[project.optional-dependencies]
ml = [
    "torch==2.2.2",
    "transformers==4.39.3",
    "sentencepiece==0.2.0",
    "timm==0.9.16",
    "opencv-python==4.9.0.80",
    "onnxruntime==1.17.1",
    "pytesseract==0.3.10",
    "easyocr==1.7.1",
    "faiss-cpu==1.7.4"
]
dev = [
    "pytest==8.3.2"
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

